Write introduction for Requirements and Design chapter and functional requirements section.

--- a/thesis.tex
+++ b/thesis.tex
@@ -23,6 +23,11 @@
 \printglossary                    % Print glossary
 
 \input{chapters/1-introduction}
+\input{chapters/2-background_matherial}
+\input{chapters/3-related_work}
+\input{chapters/4-problem_statement}
+\input{chapters/5-running_example}
+\input{chapters/6-requirements_and_design}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
