--- a/glossary.tex
+++ b/glossary.tex
@@ -3,26 +3,10 @@
 
 \makeglossaries % Prepare for adding glossary entries
 
-
-\newglossaryentry{latex}
-{
-        name=latex,
-        description={Is a mark up language specially suited for
-scientific documents}
-}
-
-\newglossaryentry{bibliography}
-{
-        name=bibliography,
-        plural=bibliographies,
-        description={A list of the books referred to in a scholarly work,
-typically printed as an appendix}
-}
-
-\newglossaryentry{maths}
-{
-    name=mathematics,
-    description={Mathematics is what mathematicians do}
+\newglossaryentry{application programming interface}{
+        name=application programming interface,
+        plural=application programming interfaces,
+        description={A set of rules and protocols that allow different software applications to communicate with each other, enabling them to exchange information or functionalities.}
 }
 
 
@@ -30,6 +14,7 @@ typically printed as an appendix}
 % ----- Acronyms -----
 % --------------------
 
-\newacronym{phd}{PhD}{philosophiae doctor}
-\newacronym{CoPCSE}{CoPCSE@NTNU}{Community of Practice in Computer ScienceEducation at NTNU}
-\newacronym{gcd}{GCD}{Greatest Common Divisor}
+\newacronym{ew}{EW}{EduWallet}
+\newacronym{lms}{LMS}{learning management system}
+\newacronym{api}{API}{\gls{application programming interface}}
+\newacronym{sw}{SW}{smart wallet}
