add Constraints and Assumptions section to Requirements chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -4,17 +4,21 @@
 \makeglossaries % Prepare for adding glossary entries
 
 \newglossaryentry{application programming interface}{
-        name=application programming interface,
+        name=Application Programming Interface,
         plural=application programming interfaces,
-        description={A set of rules and protocols that allow different software applications to communicate with each other, enabling them to exchange information or functionalities.}
+        description={A set of rules and protocols that allow different software applications to communicate with each other, enabling them to exchange information or functionalities}
 }
 
+\newglossaryentry{web3}{
+        name=web3,
+        description={}
+}
 
 % --------------------
 % ----- Acronyms -----
 % --------------------
 
 \newacronym{ew}{EW}{EduWallet}
-\newacronym{lms}{LMS}{learning management system}
+\newacronym{lms}{LMS}{Learning Management System}
 \newacronym{api}{API}{\gls{application programming interface}}
-\newacronym{sw}{SW}{smart wallet}
+\newacronym{sw}{SW}{Smart Wallet}
