--- a/thesis.tex
+++ b/thesis.tex
@@ -11,28 +11,29 @@
 
 \begin{document}
 
-\input{chapters/0a-abstract.tex}
-\input{chapters/0b-sammendrag.tex}
+% \input{chapters/0a-abstract.tex}
+% \input{chapters/0b-sammendrag.tex}
 
 \tableofcontents
-\listoffigures
-\listoftables
-\lstlistoflistings
+% \listoffigures
+% \listoftables
+% \lstlistoflistings
 
 \printglossary[type=\acronymtype] % Print acronyms
 \printglossary                    % Print glossary
 
-\input{chapters/1-introduction}
-\input{chapters/2-background_matherial}
-\input{chapters/3-related_work}
-\input{chapters/4-problem_statement}
-\input{chapters/5-running_example}
-\input{chapters/6-requirements_and_design}
+% \input{chapters/1-introduction}
+% \input{chapters/2-background_matherial}
+% \input{chapters/3-related_work}
+% \input{chapters/4-problem_statement}
+% \input{chapters/5-running_example}
+\input{chapters/6-requirements}
+\input{chapters/7-design}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
 
-\appendix
-\input{appendices/a-appendix.tex}
+% \appendix
+% \input{appendices/a-appendix.tex}
 
 \end{document}
