add a new functional requirement for students

--- a/thesis.tex
+++ b/thesis.tex
@@ -1,4 +1,5 @@
 \documentclass[british,titlepage]{ntnuthesis}
+\usepackage{svg}
 
 \title{EduWallet: A Blockchain-Enabled Digital Wallet for Managing University Course Credits}
 \shorttitle{EduWallet}
@@ -15,7 +16,7 @@
 % \input{chapters/0b-sammendrag.tex}
 
 \tableofcontents
-% \listoffigures
+\listoffigures
 % \listoftables
 % \lstlistoflistings
 
