add Decentralized Storage System section in Design chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -22,3 +22,8 @@
 \newacronym{lms}{LMS}{Learning Management System}
 \newacronym{api}{API}{\gls{application programming interface}}
 \newacronym{sw}{SW}{Smart Wallet}
+\newacronym{sdk}{SDK}{Software Development Kit}
+\newacronym{cli}{CLI}{Command Line Interface}
+\newacronym{ipfs}{IPFS}{InterPlanetary File System}
+\newacronym{cid}{CID}{Content Identifier}
+\newacronym{url}{URL}{Uniform Resource Locator}
