--- a/thesis.bib
+++ b/thesis.bib
@@ -1,20 +1,47 @@
-@article{claerbout1991scrutiny,
-  title={A Scrutiny of the Introduction},
-  author={Claerbout, Jon F},
-  journal={The Leading Edge},
-  volume={10},
-  number={1},
-  pages={39--41},
-  year={1991},
-  publisher={Society of Exploration Geophysicists}
+@misc{benet2014ipfscontentaddressed,
+    title={IPFS - Content Addressed, Versioned, P2P File System}, 
+    author={Juan Benet},
+    year={2014},
+    eprint={1407.3561},
+    archivePrefix={arXiv},
+    primaryClass={cs.NI},
+    url={https://arxiv.org/abs/1407.3561}, 
 }
 
-@article{landes1951scrutiny,
-  title={A Scrutiny of the Abstract},
-  author={Landes, Kenneth K},
-  journal={Bulletin of the American Association of Petroleum Geologists},
-  volume={35},
-  number={7},
-  pages={1660},
-  year={1951}
+@article{erikflorian2022ipfsandfrineds,
+    author={Daniel, Erik and Tschorsch, Florian},
+    journal={IEEE Communications Surveys \& Tutorials}, 
+    title={IPFS and Friends: A Qualitative Comparison of Next Generation Peer-to-Peer Data Networks}, 
+    year={2022},
+    volume={24},
+    number={1},
+    pages={31-52},
+    keywords={Peer-to-peer computing;Next generation networking;Blockchains;Cloud computing;Protocols;File systems;Overlay networks;Blockchain networks;data networks;overlay networks;peer-to-peer networks},
+    doi={10.1109/COMST.2022.3143147},
+}
+
+@article{svinashamankumarruhul2021decentralizedsecurestorage,
+    author = {Kumar, Shivansh and Bharti, Aman Kumar and Amin, Ruhul},
+    title = {Decentralized secure storage of medical records using Blockchain and IPFS: A comparative analysis with future directions},
+    journal = {SECURITY AND PRIVACY},
+    volume = {4},
+    number = {5},
+    pages = {e162},
+    keywords = {Blockchain, decentralized, IPFS, secure storage, smart-contract},
+    doi = {https://doi.org/10.1002/spy2.162},
+    url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/spy2.162},
+    eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/spy2.162},
+    year = {2021},
+}
+
+@inproceedings{barbaraanrealaura2021datapersistence,
+  author={Guidi, Barbara and Michienzi, Andrea and Ricci, Laura},
+  booktitle={2021 IEEE 18th Annual Consumer Communications \& Networking Conference (CCNC)}, 
+  title={Data Persistence in Decentralized Social Applications: The IPFS approach}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={1-4},
+  keywords={Protocols;Social networking (online);File systems;Memory;Censorship;Faces;Videos;IPFS;Data Availability;Data Persistence;DOSN;BOSM},
+  doi={10.1109/CCNC49032.2021.9369473},
 }
