add CLI section in Design chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -27,3 +27,8 @@
 \newacronym{ipfs}{IPFS}{InterPlanetary File System}
 \newacronym{cid}{CID}{Content Identifier}
 \newacronym{url}{URL}{Uniform Resource Locator}
+\newacronym{ui}{UI}{User Interface}
+\newacronym{gui}{GUI}{Graphical User Interface}
+\newacronym{ux}{UX}{User Experience}
+\newacronym{ects}{ECTS}{European Credit Transfer and Accumulation System}
+\newacronym{eth}{ETH}{Ethereum}
