begin with Smart Contracts section in Design chapter

--- a/thesis.bib
+++ b/thesis.bib
@@ -45,3 +45,26 @@
   keywords={Protocols;Social networking (online);File systems;Memory;Censorship;Faces;Videos;IPFS;Data Availability;Data Persistence;DOSN;BOSM},
   doi={10.1109/CCNC49032.2021.9369473},
 }
+
+@ARTICLE{mustafa2024publiceduchain,
+  author={Tanriverdí, Mustafa},
+  journal={IEEE Access}, 
+  title={PublicEduChain: A Framework for Sharing Student-Owned Educational Data on Public Blockchain Network}, 
+  year={2024},
+  volume={12},
+  number={},
+  pages={51772-51785},
+  keywords={Blockchains;Education;Smart contracts;Stakeholders;Digital signatures;Decentralized applications;Collaboration;Learning systems;Blockchain in education;Ethereum;learning management system sharing educational data;smart contract;student owned data},
+  doi={10.1109/ACCESS.2024.3385660}
+}
+
+@article{yassynzhanbolatzhan2021verificationuniversitystudent,
+    author = {Shakan, Yassynzhan and Kumalakov, Bolatzhan and Mutanov, Galimkair and Mamykova, Zhanl and Kistaubayev, Ye.I.},
+    year = {2021},
+    month = {09},
+    pages = {},
+    title = {Verification of University Student and Graduate Data using Blockchain Technology},
+    volume = {16},
+    journal = {INTERNATIONAL JOURNAL OF COMPUTERS COMMUNICATIONS \& CONTROL},
+    doi = {10.15837/ijccc.2021.5.4266}
+}
