--- a/thesis.tex
+++ b/thesis.tex
@@ -33,7 +33,9 @@
 \chapter*{\bibname}
 \printbibliography[heading=none]
 
-% \appendix
-% \input{appendices/a-appendix.tex}
+\appendix
+\input{appendices/gitHubRepo.tex}
+\input{appendices/figma}
+\input{appendices/layer2}
 
 \end{document}
