--- a/glossary.tex
+++ b/glossary.tex
@@ -10,7 +10,7 @@
 }
 
 \newglossaryentry{web3}{
-        name=web3,
+        name=Web3,
         description={}
 }
 
@@ -32,3 +32,4 @@
 \newacronym{ux}{UX}{User Experience}
 \newacronym{ects}{ECTS}{European Credit Transfer and Accumulation System}
 \newacronym{eth}{ETH}{Ethereum}
+\newacronym{evm}{EVM}{Ethereum Virtual Machine}
