--- a/thesis.tex
+++ b/thesis.tex
@@ -16,8 +16,8 @@
 
 \tableofcontents
 \listoffigures
-% \listoftables
-% \lstlistoflistings
+\listoftables
+\lstlistoflistings
 
 \printglossary[type=\acronymtype] % Print acronyms
 \printglossary                    % Print glossary
