add Student, University, StudentDeployer and UniversityDeployer and Paymaster sections in Design chapter.

--- a/thesis.bib
+++ b/thesis.bib
@@ -68,3 +68,25 @@
     journal = {INTERNATIONAL JOURNAL OF COMPUTERS COMMUNICATIONS \& CONTROL},
     doi = {10.15837/ijccc.2021.5.4266}
 }
+
+@article{surya2024designdecentralizedidentity,
+    title={Designing a Decentralized Identity Verification Platform},
+    url={https://www.ntnu.no/ojs/index.php/nikt/article/view/6249},
+    number={3},
+    journal={Norsk IKT-konferanse for forskning og utdanning},
+    author={Kahtyat, Surya},
+    year={2024},
+    month={10}
+}
+
+@inproceedings{quinshiping2023accountabstractionanalysed,
+  author={Wang, Qin and Chen, Shiping},
+  booktitle={2023 IEEE International Conference on Blockchain (Blockchain)}, 
+  title={Account Abstraction, Analysed}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={323-331},
+  keywords={Technological innovation;Decentralized applications;Blockchains;Security;Standards;Ethereum;Account Abstraction;EOA},
+  doi={10.1109/Blockchain60715.2023.00057}}
+
