--- a/thesis.tex
+++ b/thesis.tex
@@ -41,7 +41,9 @@
 % \input{chapters/4-problem_statement}
 % \input{chapters/5-running_example}
 \input{chapters/6-requirements}
-\input{chapters/7-design}
+\input{chapters/7-system_architecture}
+\input{chapters/8-on_chain_design}
+\input{chapters/9-off_chain_design}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
