complete On-chain Design chapter

--- a/appendices/basePaymaster.tex
+++ b/appendices/basePaymaster.tex
@@ -2,6 +2,7 @@
 \label{chap:basePaymaster}
 
 \lstinputlisting[%
+    caption={BasePaymaster smart contract},
     language=Solidity,
     numbers=left,
 ]{listings/BasePaymaster.sol}
