--- a/thesis.bib
+++ b/thesis.bib
@@ -88,5 +88,22 @@
   number={},
   pages={323-331},
   keywords={Technological innovation;Decentralized applications;Blockchains;Security;Standards;Ethereum;Account Abstraction;EOA},
-  doi={10.1109/Blockchain60715.2023.00057}}
+  doi={10.1109/Blockchain60715.2023.00057}
+}
 
+@misc{sguanci2021layer2blockchainscaling,
+      title={Layer 2 Blockchain Scaling: a Survey}, 
+      author={Cosimo Sguanci and Roberto Spatafora and Andrea Mario Vergani},
+      year={2021},
+      eprint={2107.10881},
+      archivePrefix={arXiv},
+      primaryClass={cs.DC},
+      url={https://arxiv.org/abs/2107.10881}, 
+}
+
+@techreport{buterin2021erc,
+  title={ERC-4337: Account abstraction using alt mempool},
+  author={Buterin, Vitalik and Weiss, Yoav and Tirosh, Dror and Nacson, Shahaf and Forshtat, Alex and Gazso, Kristof and Hess, Tjaden},
+  year={2021},
+  institution={Ethereum Improvement Proposals}
+}
