--- a/glossary.tex
+++ b/glossary.tex
@@ -14,6 +14,13 @@
         description={}
 }
 
+\newglossaryentry{mempool}{
+    name=mempool,
+    plural=mempools,
+    description={Short for memory pool. In general computing, it refers to a temporary memory area used to manage pending operations. In the context of blockchain and account abstraction, a mempool is a temporary storage area to hold UserOerations that have been broadcast to the network but are not yet included in a block}
+}
+
+
 % --------------------
 % ----- Acronyms -----
 % --------------------
@@ -33,3 +40,6 @@
 \newacronym{ects}{ECTS}{European Credit Transfer and Accumulation System}
 \newacronym{eth}{ETH}{Ethereum}
 \newacronym{evm}{EVM}{Ethereum Virtual Machine}
+\newacronym{eoa}{EOA}{Externally Owned Account}
+\newacronym{sca}{SCA}{Smart Contract Account}
+\newacronym{it}{IT}{Information Technology}
