complete off-chain design chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -9,15 +9,16 @@
         description={A set of rules and protocols that allow different software applications to communicate with each other, enabling them to exchange information or functionalities}
 }
 
-\newglossaryentry{web3}{
-        name=Web3,
-        description={}
-}
-
 \newglossaryentry{mempool}{
     name=mempool,
     plural=mempools,
     description={Short for memory pool. In general computing, it refers to a temporary memory area used to manage pending operations. In the context of blockchain and account abstraction, a mempool is a temporary storage area to hold UserOerations that have been broadcast to the network but are not yet included in a block}
+}
+
+\newglossaryentry{salt}{
+    name=salt,
+    plural=salts,
+    description={A salt is a random sequence of data used in cryptography. It is added to a password before hashing, with the purpose of making the resulting hash unique, even if two users have the same password}
 }
 
 
