--- a/thesis.tex
+++ b/thesis.tex
@@ -1,8 +1,15 @@
 \documentclass[british,titlepage]{ntnuthesis}
 
 \usepackage{listings-solidity}
+\usepackage{listings-typescript}
 
 \usepackage{xcolor}
+
+% Define custom colors for syntax highlighting
+\definecolor{tskeyword}{rgb}{0.0, 0.0, 0.6}
+\definecolor{tscomment}{rgb}{0.0, 0.5, 0.0}
+\definecolor{tsstring}{rgb}{0.58, 0, 0.82}
+
 \definecolor{verylightgray}{rgb}{.97,.97,.97}
 
 \lstset{ % define general preferences
@@ -45,14 +52,16 @@
 \input{chapters/7-system_architecture}
 \input{chapters/8-on_chain_design}
 \input{chapters/9-off_chain_design}
+\input{chapters/10-implementation}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
 
 \appendix
-\input{appendices/gitHubRepo.tex}
+\input{appendices/github_repo}
 \input{appendices/figma}
-\input{appendices/baseAccount}
-\input{appendices/basePaymaster}
+\input{appendices/base_account}
+\input{appendices/base_paymaster}
+\input{appendices/hardhat_configuration}
 
 \end{document}
