Updates from Overleaf

--- a/glossary.tex
+++ b/glossary.tex
@@ -44,3 +44,4 @@
 \newacronym{eoa}{EOA}{Externally Owned Account}
 \newacronym{sca}{SCA}{Smart Contract Account}
 \newacronym{it}{IT}{Information Technology}
+\newacronym{abi}{ABI}{Application Binary Interface}
