--- a/thesis.tex
+++ b/thesis.tex
@@ -63,5 +63,6 @@
 \input{appendices/base_account}
 \input{appendices/base_paymaster}
 \input{appendices/hardhat_configuration}
+\input{appendices/account_abstraction}
 
 \end{document}
