complete Background Matherial chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -21,6 +21,32 @@
     description={A salt is a random sequence of data used in cryptography. It is added to a password before hashing, with the purpose of making the resulting hash unique, even if two users have the same password}
 }
 
+\newglossaryentry{keccak256}{
+    name=Keccak-256,
+    description={A cryptographic hash function that belongs to the Keccak family. It produces a fixed 256-byte hash},
+}
+
+\newglossaryentry{nonce}{
+    name=nonce,
+    plural=nonces,
+    description={A nonce is a number that can be used only once in a cryptographic communication. In \acrlong{eth}, the nonce represents the number of transactions sent by a specific address and is used to ensure the uniqueness and validity of each transaction},
+}
+
+\newglossaryentry{hash}{
+    name=hash,
+    plural=hashes,
+    description={In computer science, a hash function is an algorithm that takes an input of arbitrary length and produces a fixed-size output, commonly referred to as a hash or digest},
+}
+
+\newglossaryentry{double-spending}{
+    name=double-spending,
+    description={The double-spending problem refers to the malicious act of spending the same digital currency multiple times. In digital systems without adequate safeguards, this vulnerability could allow users to duplicate funds and undermine the integrity of the monetary system},
+}
+
+\newglossaryentry{p2p}{
+    name=peer-to-peer,
+    description={A peer-to-peer network is a distributed system architecture in which all participating nodes, called peers, have equal authority and responsibility},
+}
 
 % --------------------
 % ----- Acronyms -----
@@ -45,3 +71,10 @@
 \newacronym{sca}{SCA}{Smart Contract Account}
 \newacronym{it}{IT}{Information Technology}
 \newacronym{abi}{ABI}{Application Binary Interface}
+\newacronym{aws}{AWS}{Amazon Web Services}
+\newacronym{pdf}{PDF}{Portable Document Format}
+\newacronym{fr}{FR}{Functional Requirement}
+\newacronym{nfr}{NFR}{Non-Functional Requirement}
+\newacronym{www}{WWW}{World-Wide Web}
+\newacronym{btc}{BTC}{Bitcoin}
+\newacronym{dapp}{dApp}{decentralized application}
