--- a/thesis.bib
+++ b/thesis.bib
@@ -46,16 +46,14 @@
   doi={10.1109/CCNC49032.2021.9369473},
 }
 
-@ARTICLE{mustafa2024publiceduchain,
-  author={Tanriverdí, Mustafa},
-  journal={IEEE Access}, 
-  title={PublicEduChain: A Framework for Sharing Student-Owned Educational Data on Public Blockchain Network}, 
-  year={2024},
+@article{mustafa2024publiceduchain,
+  title={Publiceduchain: A framework for sharing student-owned educational data on public blockchain network},
+  author={Tanriverdi, Mustafa},
+  journal={IEEE Access},
   volume={12},
-  number={},
   pages={51772-51785},
-  keywords={Blockchains;Education;Smart contracts;Stakeholders;Digital signatures;Decentralized applications;Collaboration;Learning systems;Blockchain in education;Ethereum;learning management system sharing educational data;smart contract;student owned data},
-  doi={10.1109/ACCESS.2024.3385660}
+  year={2024},
+  publisher={IEEE}
 }
 
 @article{yassynzhanbolatzhan2021verificationuniversitystudent,
@@ -106,4 +104,120 @@
   author={Buterin, Vitalik and Weiss, Yoav and Tirosh, Dror and Nacson, Shahaf and Forshtat, Alex and Gazso, Kristof and Hess, Tjaden},
   year={2021},
   institution={Ethereum Improvement Proposals}
+}
+
+@article{berners1992world,
+  title={World-Wide Web: the information universe},
+  author={Berners-Lee, Tim and Cailliau, Robert and Groff, Jean-Fran{\c{c}}ois and Pollermann, Bernd},
+  journal={Internet Research},
+  volume={2},
+  number={1},
+  pages={52--58},
+  year={1992},
+  publisher={MCB UP Ltd}
+}
+
+@article{choudhury2014world,
+  title={World wide web and its journey from web 1.0 to web 4.0},
+  author={Choudhury, Nupur},
+  journal={International Journal of Computer Science and Information Technologies},
+  volume={5},
+  number={6},
+  pages={8096--8100},
+  year={2014}
+}
+
+@article{murray2023promise,
+  title={The promise of a decentralized internet: What is Web3 and how can firms prepare?},
+  author={Murray, Alex and Kim, Dennie and Combs, Jordan},
+  journal={Business horizons},
+  volume={66},
+  number={2},
+  pages={191--202},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@misc{kristol1997rfc2109,
+  title={RFC2109: HTTP state management mechanism},
+  author={Kristol, David and Montulli, Lou},
+  year={1997},
+  publisher={RFC Editor}
+}
+
+@article{sheridan2022web3,
+  title={Web3 challenges and opportunities for the market},
+  author={Sheridan, Dan and Harris, James and Wear, Frank and Cowell Jr, Jerry and Wong, Easton and Yazdinejad, Abbas},
+  journal={arXiv preprint arXiv:2209.02446},
+  year={2022}
+}
+
+@article{nofer2017blockchain,
+  title={Blockchain},
+  author={Nofer, Michael and Gomber, Peter and Hinz, Oliver and Schiereck, Dirk},
+  journal={Business \& information systems engineering},
+  volume={59},
+  pages={183--187},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{ray2023web3,
+  title={Web3: A comprehensive review on background, technologies, applications, zero-trust architectures, challenges and future directions},
+  author={Ray, Partha Pratim},
+  journal={Internet of Things and Cyber-Physical Systems},
+  volume={3},
+  pages={213--248},
+  year={2023},
+  publisher={Elsevier}
+}
+
+@article{nakamoto2008bitcoin,
+  title={Bitcoin: A peer-to-peer electronic cash system},
+  author={Nakamoto, Satoshi},
+  journal={Bitcoin.--URL: https://bitcoin. org/bitcoin. pdf},
+  year={2008}
+}
+
+@article{buterin2014next,
+  title={A next-generation smart contract and decentralized application platform},
+  author={Buterin, Vitalik and others},
+  journal={white paper},
+  volume={3},
+  number={37},
+  pages={2--1},
+  year={2014}
+}
+
+@inproceedings {kalodner2018arbitrum,
+    author = {Harry Kalodner and Steven Goldfeder and Xiaoqi Chen and S. Matthew Weinberg and Edward W. Felten},
+    title = {Arbitrum: Scalable, private smart contracts},
+    booktitle = {27th USENIX Security Symposium (USENIX Security 18)},
+    year = {2018},
+    isbn = {978-1-939133-04-5},
+    address = {Baltimore, MD},
+    pages = {1353--1370},
+    url = {https://www.usenix.org/conference/usenixsecurity18/presentation/kalodner},
+    publisher = {USENIX Association},
+    month = aug
+}
+
+@article{wood2014ethereum,
+  title={Ethereum: A secure decentralised generalised transaction ledger},
+  author={Wood, Gavin and others},
+  journal={Ethereum project yellow paper},
+  volume={151},
+  number={2014},
+  pages={1--32},
+  year={2014}
+}
+
+@article{muhle2018survey,
+  title={A survey on essential components of a self-sovereign identity},
+  author={M{\"u}hle, Alexander and Gr{\"u}ner, Andreas and Gayvoronskaya, Tatiana and Meinel, Christoph},
+  journal={Computer Science Review},
+  volume={30},
+  pages={80--86},
+  year={2018},
+  publisher={Elsevier}
 }
