--- a/thesis.tex
+++ b/thesis.tex
@@ -44,7 +44,7 @@
 \printglossary                    % Print glossary
 
 % \input{chapters/1-introduction}
-% \input{chapters/2-background_matherial}
+\input{chapters/2-background_matherial}
 % \input{chapters/3-related_work}
 % \input{chapters/4-problem_statement}
 % \input{chapters/5-running_example}
@@ -64,5 +64,6 @@
 \input{appendices/base_paymaster}
 \input{appendices/hardhat_configuration}
 \input{appendices/account_abstraction}
+\input{appendices/pinning_system_api}
 
 \end{document}
