complete `Introduction` chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -78,3 +78,5 @@
 \newacronym{www}{WWW}{World-Wide Web}
 \newacronym{btc}{BTC}{Bitcoin}
 \newacronym{dapp}{dApp}{decentralized application}
+\newacronym{mit}{MIT}{Massachusetts Institute of Technology}
+\newacronym{dcc}{DCC}{Digital Credential Consortium}
