--- a/thesis.bib
+++ b/thesis.bib
@@ -221,3 +221,22 @@
   year={2018},
   publisher={Elsevier}
 }
+
+@article{rentzsch2023digital,
+  title={Digital credentials in education--The situation in Germany and Europe in 2020},
+  author={Rentzsch, Robert},
+  journal={Institute for Innovation and Technology (IIT) within the VDI/VDE Innovation+ Technik GmbH. https://www. iit-berlin. de/wp-content/uploads/2021/05/03-Kurzstudie-Digital-Credentials. pdf. Accessed},
+  volume={18},
+  year={2023}
+}
+
+@article{tariq2022cerberus,
+  title={Cerberus: A blockchain-based accreditation and degree verification system},
+  author={Tariq, Aamna and Haq, Hina Binte and Ali, Syed Taha},
+  journal={IEEE Transactions on Computational Social Systems},
+  volume={10},
+  number={4},
+  pages={1503--1514},
+  year={2022},
+  publisher={IEEE}
+}
