--- a/thesis.tex
+++ b/thesis.tex
@@ -43,16 +43,15 @@
 \printglossary[type=\acronymtype] % Print acronyms
 \printglossary                    % Print glossary
 
-% \input{chapters/1-introduction}
+\input{chapters/1-introduction}
 \input{chapters/2-background_matherial}
-% \input{chapters/3-related_work}
-% \input{chapters/4-problem_statement}
-% \input{chapters/5-running_example}
-\input{chapters/6-requirements}
-\input{chapters/7-system_architecture}
-\input{chapters/8-on_chain_design}
-\input{chapters/9-off_chain_design}
-\input{chapters/10-implementation}
+\input{chapters/3-related_work}
+\input{chapters/4-problem_statement}
+\input{chapters/5-requirements}
+\input{chapters/6-system_architecture}
+\input{chapters/7-on_chain_design}
+\input{chapters/8-off_chain_design}
+\input{chapters/9-implementation}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
