complete `Problem Statement` chapter

--- a/tables/functional_requirements.tex
+++ b/tables/functional_requirements.tex
@@ -6,24 +6,24 @@
 \hline
 \multicolumn{2}{|c|}{\textbf{System Administration}} \\
 \hline
-FR1 & Allow the system administrator to verify and approve universities requesting access to the \acrlong{ew} system. \\
+\gls{fr}1 & Allow the system administrator to verify and approve universities requesting access to the \gls{ew} system. \\
 \hline
 \multicolumn{2}{|c|}{\textbf{University}} \\
 \hline
-FR2 & Enable universities to register and subscribe to the system. \\
-FR3 & Provide secure authentication mechanisms for universities to access the platform. \\
-FR4 & Allow universities to create new smart contract wallets for students upon enrolment. \\
-FR5 & Enable universities to read from and issue academic records to students' smart wallets. \\
-FR6 & Implement authorization controls to ensure that only permitted universities can access or modify specific academic records. \\
-FR7 & Provide a mechanism for universities to request and obtain permission from students before accessing or modifying their academic records. \\
-FR8 & Provide APIs that allow universities to integrate the \acrlong{ew} system with their existing \acrlong{lms}. \\
+\gls{fr}2 & Enable universities to register and subscribe to the system. \\
+\gls{fr}3 & Provide secure authentication mechanisms for universities to access the platform. \\
+\gls{fr}4 & Allow universities to create new smart contract wallets for students upon enrolment. \\
+\gls{fr}5 & Enable universities to read from and issue academic records to students' smart wallets. \\
+\gls{fr}6 & Implement authorization controls to ensure that only permitted universities can access or modify specific academic records. \\
+\gls{fr}7 & Provide a mechanism for universities to request and obtain permission from students before accessing or modifying their academic records. \\
+\gls{fr}8 & Provide \glspl{api} that allow universities to integrate the \gls{ew} system with their existing \gls{lms}. \\
 \hline
 \multicolumn{2}{|c|}{\textbf{Student}} \\
 \hline
-FR9  & Students must own and manage their academic smart wallets independently. \\
-FR10 & Enable students to securely authenticate and access their smart wallets. \\
-FR11 & Provide students with a web-based interface to view and manage their academic records. \\
-FR12 & Allow students to grant and revoke access permissions to their academic records for specific institutions. \\
+\gls{fr}9  & Students must own and manage their academic smart wallets independently. \\
+\gls{fr}10 & Enable students to securely authenticate and access their smart wallets. \\
+\gls{fr}11 & Provide students with a web-based interface to view and manage their academic records. \\
+\gls{fr}12 & Allow students to grant and revoke access permissions to their academic records for specific institutions. \\
 \hline
 \end{tabular}
 \end{table}
