--- a/tables/related_solutions.tex
+++ b/tables/related_solutions.tex
@@ -4,7 +4,7 @@
 \label{tab:relSolutions}
 \begin{tabular}{|p{0.20\linewidth}|p{0.22\linewidth}|p{0.22\linewidth}|p{0.23\linewidth}|}
 \hline
-\textbf{Solution} & \textbf{Focus} & \textbf{Data Ownership} & \textbf{\acrshort{ux}} \\
+\textbf{Solution} & \textbf{Focus} & \textbf{Data Ownership} & \textbf{\gls{ux}} \\
 \hline
 Blockcerts & Certificates & Students & Libraries and mobile applications \\
 \hline
@@ -12,7 +12,7 @@ Blockcerts & Certificates & Students & Libraries and mobile applications \\
 \hline
 PublicEduChain & Full academic records & Students & Students must write and deploy smart contracts \\
 \hline
-Cerberus & Certificates & Universities & Verification via QR code \\
+Cerberus & Certificates & Universities & Verification via \gls{qr} code \\
 \hline
 \end{tabular}
 \end{table}
