--- a/glossary.tex
+++ b/glossary.tex
@@ -3,7 +3,7 @@
 
 \makeglossaries % Prepare for adding glossary entries
 
-\newglossaryentry{application programming interface}{
+\newglossaryentry{gls-api}{
         name=Application Programming Interface,
         plural=application programming interfaces,
         description={A set of rules and protocols that allow different software applications to communicate with each other, enabling them to exchange information or functionalities}
@@ -11,13 +11,11 @@
 
 \newglossaryentry{mempool}{
     name=mempool,
-    plural=mempools,
     description={Short for memory pool. In general computing, it refers to a temporary memory area used to manage pending operations. In the context of blockchain and account abstraction, a mempool is a temporary storage area to hold UserOerations that have been broadcast to the network but are not yet included in a block}
 }
 
 \newglossaryentry{salt}{
     name=salt,
-    plural=salts,
     description={A salt is a random sequence of data used in cryptography. It is added to a password before hashing, with the purpose of making the resulting hash unique, even if two users have the same password}
 }
 
@@ -28,7 +26,6 @@
 
 \newglossaryentry{nonce}{
     name=nonce,
-    plural=nonces,
     description={A nonce is a number that can be used only once in a cryptographic communication. In \acrlong{eth}, the nonce represents the number of transactions sent by a specific address and is used to ensure the uniqueness and validity of each transaction},
 }
 
@@ -54,8 +51,7 @@
 
 \newacronym{ew}{EW}{EduWallet}
 \newacronym{lms}{LMS}{Learning Management System}
-\newacronym{api}{API}{\gls{application programming interface}}
-\newacronym{sw}{SW}{Smart Wallet}
+\newacronym[see={[Glossary:]{gls-api}}]{api}{API}{Application Programming Interface \glsadd{gls-api}}
 \newacronym{sdk}{SDK}{Software Development Kit}
 \newacronym{cli}{CLI}{Command Line Interface}
 \newacronym{ipfs}{IPFS}{InterPlanetary File System}
@@ -65,7 +61,7 @@
 \newacronym{gui}{GUI}{Graphical User Interface}
 \newacronym{ux}{UX}{User Experience}
 \newacronym{ects}{ECTS}{European Credit Transfer and Accumulation System}
-\newacronym{eth}{ETH}{Ethereum}
+\newacronym{eth}{ETH}{Ether}
 \newacronym{evm}{EVM}{Ethereum Virtual Machine}
 \newacronym{eoa}{EOA}{Externally Owned Account}
 \newacronym{sca}{SCA}{Smart Contract Account}
@@ -73,10 +69,11 @@
 \newacronym{abi}{ABI}{Application Binary Interface}
 \newacronym{aws}{AWS}{Amazon Web Services}
 \newacronym{pdf}{PDF}{Portable Document Format}
-\newacronym{fr}{FR}{Functional Requirement}
-\newacronym{nfr}{NFR}{Non-Functional Requirement}
+\newacronym{fr}{FR}{functional requirement}
+\newacronym{nfr}{NFR}{non-functional Requirement}
 \newacronym{www}{WWW}{World-Wide Web}
 \newacronym{btc}{BTC}{Bitcoin}
 \newacronym{dapp}{dApp}{decentralized application}
 \newacronym{mit}{MIT}{Massachusetts Institute of Technology}
 \newacronym{dcc}{DCC}{Digital Credential Consortium}
+\newacronym{qr}{QR}{Quick Response}
