--- a/tables/non_functional_requirements.tex
+++ b/tables/non_functional_requirements.tex
@@ -4,12 +4,12 @@
 \label{tab:nonFuncReq}
 \begin{tabular}{|p{1.0cm}|p{11cm}|}
 \hline
-NFR1 & The system shall operate without dependency on third-party wallet providers such as MetaMask. \\
-NFR2 & The system shall minimize reliance on third-party technologies to enhance security and maintain control. \\
-NFR3 & On-chain storage costs shall be minimized by storing only essential data, excluding large files. \\
-NFR4 & Academic records shall be tamper-proof and verifiable by authorized third parties. \\
-NFR5 & The system shall provide an intuitive and user-friendly interface for both students and university administrators. \\
-NFR6 & The system architecture shall be designed to maximize decentralization wherever feasible. \\
+\gls{nfr}1 & The system shall operate without dependency on third-party wallet providers such as MetaMask. \\
+\gls{nfr}2 & The system shall minimize reliance on third-party technologies to enhance security and maintain control. \\
+\gls{nfr}3 & On-chain storage costs shall be minimized by storing only essential data, excluding large files. \\
+\gls{nfr}4 & Academic records shall be tamper-proof and verifiable by authorized third parties. \\
+\gls{nfr}5 & The system shall provide an intuitive and user-friendly interface for both students and university administrators. \\
+\gls{nfr}6 & The system architecture shall be designed to maximize decentralization wherever feasible. \\
 \hline
 \end{tabular}
 \end{table}
