complete `Validation` chapter

--- a/glossary.tex
+++ b/glossary.tex
@@ -70,10 +70,11 @@
 \newacronym{aws}{AWS}{Amazon Web Services}
 \newacronym{pdf}{PDF}{Portable Document Format}
 \newacronym{fr}{FR}{functional requirement}
-\newacronym{nfr}{NFR}{non-functional Requirement}
+\newacronym{nfr}{NFR}{non-functional requirement}
 \newacronym{www}{WWW}{World-Wide Web}
 \newacronym{btc}{BTC}{Bitcoin}
 \newacronym{dapp}{dApp}{decentralized application}
 \newacronym{mit}{MIT}{Massachusetts Institute of Technology}
 \newacronym{dcc}{DCC}{Digital Credential Consortium}
 \newacronym{qr}{QR}{Quick Response}
+\newacronym{id}{ID}{identifier}
