--- a/tables/related_solutions.tex
+++ b/tables/related_solutions.tex
@@ -4,7 +4,7 @@
 \label{tab:relSolutions}
 \begin{tabular}{|p{0.20\linewidth}|p{0.22\linewidth}|p{0.22\linewidth}|p{0.23\linewidth}|}
 \hline
-\textbf{Solution} & \textbf{Focus} & \textbf{Data Ownership} & \textbf{\gls{ux}} \\
+\multicolumn{1}{|c|}{\textbf{Solution}} & \multicolumn{1}{c|}{\textbf{Focus}} & \multicolumn{1}{c|}{\textbf{Data Ownership}} & \multicolumn{1}{c|}{\textbf{\gls{ux}}} \\
 \hline
 Blockcerts & Certificates & Students & Libraries and mobile applications \\
 \hline
