--- a/thesis.bib
+++ b/thesis.bib
@@ -240,3 +240,15 @@
   year={2022},
   publisher={IEEE}
 }
+
+@inproceedings{lin2024accountabstraction,
+  author={Lin, Zibin and Wang, Taotao and Zhao, Chonghe and Zhang, Shengli and Yang, Qing and Shi, Long},
+  booktitle={2024 International Conference on Computing, Networking and Communications (ICNC)}, 
+  title={A Measurement Investigation of ERC-4337 Smart Contracts on Ethereum Blockchain}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={1164-1170},
+  keywords={Costs;Smart contracts;Extensibility;Classification algorithms;Consensus protocol;Proposals;Logic;Ethereum;Account Abstraction;ERC-4337;Smart Contract;Gas},
+  doi={10.1109/ICNC59896.2024.10556301}
+}
