--- a/thesis.tex
+++ b/thesis.tex
@@ -52,6 +52,7 @@
 \input{chapters/7-on_chain_design}
 \input{chapters/8-off_chain_design}
 \input{chapters/9-implementation}
+\input{chapters/10-validation}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
