complete 'Discussion' and 'Counclusion' chapters

--- a/thesis.bib
+++ b/thesis.bib
@@ -8,7 +8,7 @@
     url={https://arxiv.org/abs/1407.3561}, 
 }
 
-@article{erikflorian2022ipfsandfrineds,
+@article{erikflorian2022ipfsandfriends,
     author={Daniel, Erik and Tschorsch, Florian},
     journal={IEEE Communications Surveys \& Tutorials}, 
     title={IPFS and Friends: A Qualitative Comparison of Next Generation Peer-to-Peer Data Networks}, 
@@ -39,31 +39,29 @@
   booktitle={2021 IEEE 18th Annual Consumer Communications \& Networking Conference (CCNC)}, 
   title={Data Persistence in Decentralized Social Applications: The IPFS approach}, 
   year={2021},
-  volume={},
-  number={},
   pages={1-4},
   keywords={Protocols;Social networking (online);File systems;Memory;Censorship;Faces;Videos;IPFS;Data Availability;Data Persistence;DOSN;BOSM},
   doi={10.1109/CCNC49032.2021.9369473},
 }
 
 @article{mustafa2024publiceduchain,
-  title={Publiceduchain: A framework for sharing student-owned educational data on public blockchain network},
-  author={Tanriverdi, Mustafa},
-  journal={IEEE Access},
+  author={Tanriverdí, Mustafa},
+  journal={IEEE Access}, 
+  title={PublicEduChain: A Framework for Sharing Student-Owned Educational Data on Public Blockchain Network}, 
+  year={2024},
   volume={12},
   pages={51772-51785},
-  year={2024},
-  publisher={IEEE}
+  keywords={Blockchains;Education;Smart contracts;Stakeholders;Digital signatures;Decentralized applications;Collaboration;Learning systems;Blockchain in education;Ethereum;learning management system sharing educational data;smart contract;student owned data},
+  doi={10.1109/ACCESS.2024.3385660}
 }
 
 @article{yassynzhanbolatzhan2021verificationuniversitystudent,
     author = {Shakan, Yassynzhan and Kumalakov, Bolatzhan and Mutanov, Galimkair and Mamykova, Zhanl and Kistaubayev, Ye.I.},
     year = {2021},
     month = {09},
-    pages = {},
     title = {Verification of University Student and Graduate Data using Blockchain Technology},
     volume = {16},
-    journal = {INTERNATIONAL JOURNAL OF COMPUTERS COMMUNICATIONS \& CONTROL},
+    journal={International Journal of Computers Communications \& Control},
     doi = {10.15837/ijccc.2021.5.4266}
 }
 
@@ -82,8 +80,6 @@
   booktitle={2023 IEEE International Conference on Blockchain (Blockchain)}, 
   title={Account Abstraction, Analysed}, 
   year={2023},
-  volume={},
-  number={},
   pages={323-331},
   keywords={Technological innovation;Decentralized applications;Blockchains;Security;Standards;Ethereum;Account Abstraction;EOA},
   doi={10.1109/Blockchain60715.2023.00057}
@@ -107,14 +103,14 @@
 }
 
 @article{berners1992world,
-  title={World-Wide Web: the information universe},
-  author={Berners-Lee, Tim and Cailliau, Robert and Groff, Jean-Fran{\c{c}}ois and Pollermann, Bernd},
-  journal={Internet Research},
-  volume={2},
-  number={1},
-  pages={52--58},
-  year={1992},
-  publisher={MCB UP Ltd}
+    author = {Berners-Lee, Tim and Cailliau, Robert and Groff, Jean-François and Pollermann, Bernd},
+    title = {World-Wide Web: The Information Universe},
+    journal = {Internet Research},
+    volume = {2},
+    number = {1},
+    pages = {52--58},
+    year = {1992},
+    doi = {10.1108/eb047254},
 }
 
 @article{choudhury2014world,
@@ -128,14 +124,17 @@
 }
 
 @article{murray2023promise,
-  title={The promise of a decentralized internet: What is Web3 and how can firms prepare?},
-  author={Murray, Alex and Kim, Dennie and Combs, Jordan},
-  journal={Business horizons},
-  volume={66},
-  number={2},
-  pages={191--202},
-  year={2023},
-  publisher={Elsevier}
+    title = {The promise of a decentralized internet: What is Web3 and how can firms prepare?},
+    journal = {Business Horizons},
+    volume = {66},
+    number = {2},
+    pages = {191-202},
+    year = {2023},
+    issn = {0007-6813},
+    doi = {https://doi.org/10.1016/j.bushor.2022.06.002},
+    url = {https://www.sciencedirect.com/science/article/pii/S0007681322000714},
+    author = {Alex Murray and Dennie Kim and Jordan Combs},
+    keywords = {Web3, Blockchain, Cryptocurrency, Metaverse, Decentralization},
 }
 
 @misc{kristol1997rfc2109,
@@ -145,31 +144,39 @@
   publisher={RFC Editor}
 }
 
-@article{sheridan2022web3,
-  title={Web3 challenges and opportunities for the market},
-  author={Sheridan, Dan and Harris, James and Wear, Frank and Cowell Jr, Jerry and Wong, Easton and Yazdinejad, Abbas},
-  journal={arXiv preprint arXiv:2209.02446},
-  year={2022}
+@misc{sheridan2022web3,
+    title={Web3 Challenges and Opportunities for the Market}, 
+    author={Dan Sheridan and James Harris and Frank Wear and Jerry Cowell Jr and Easton Wong and Abbas Yazdinejad},
+    year={2022},
+    eprint={2209.02446},
+    archivePrefix={arXiv},
+    %primaryClass={cs.CY},
+    url={https://arxiv.org/abs/2209.02446},
 }
 
 @article{nofer2017blockchain,
-  title={Blockchain},
-  author={Nofer, Michael and Gomber, Peter and Hinz, Oliver and Schiereck, Dirk},
-  journal={Business \& information systems engineering},
-  volume={59},
-  pages={183--187},
-  year={2017},
-  publisher={Springer}
+    author = {Nofer, Michael and Gomber, Peter and Hinz, Oliver and Schiereck, Dirk},
+    title = {Blockchain},
+    journal = {Business \& Information Systems Engineering},
+    volume = {59},
+    number = {3},
+    pages = {183-187},
+    year = {2017},
+    doi = {10.1007/s12599-017-0467-3},
+    issn = {1867-0202},
 }
 
 @article{ray2023web3,
-  title={Web3: A comprehensive review on background, technologies, applications, zero-trust architectures, challenges and future directions},
-  author={Ray, Partha Pratim},
-  journal={Internet of Things and Cyber-Physical Systems},
-  volume={3},
-  pages={213--248},
-  year={2023},
-  publisher={Elsevier}
+    title = {Web3: A comprehensive review on background, technologies, applications, zero-trust architectures, challenges and future directions},
+    journal = {Internet of Things and Cyber-Physical Systems},
+    volume = {3},
+    pages = {213-248},
+    year = {2023},
+    issn = {2667-3452},
+    doi = {https://doi.org/10.1016/j.iotcps.2023.05.003},
+    url = {https://www.sciencedirect.com/science/article/pii/S2667345223000305},
+    author = {Partha Pratim Ray},
+    keywords = {Web3, Decentralization, Blockchain, Digital transformation, DApps, Zero-Trust architecture}
 }
 
 @article{nakamoto2008bitcoin,
@@ -185,7 +192,7 @@
   journal={white paper},
   volume={3},
   number={37},
-  pages={2--1},
+  pages={2-1},
   year={2014}
 }
 
@@ -196,10 +203,9 @@
     year = {2018},
     isbn = {978-1-939133-04-5},
     address = {Baltimore, MD},
-    pages = {1353--1370},
-    url = {https://www.usenix.org/conference/usenixsecurity18/presentation/kalodner},
+    pages = {1353-1370},
     publisher = {USENIX Association},
-    month = aug
+    month = {08}
 }
 
 @article{wood2014ethereum,
@@ -208,18 +214,20 @@
   journal={Ethereum project yellow paper},
   volume={151},
   number={2014},
-  pages={1--32},
+  pages={1-32},
   year={2014}
 }
 
 @article{muhle2018survey,
-  title={A survey on essential components of a self-sovereign identity},
-  author={M{\"u}hle, Alexander and Gr{\"u}ner, Andreas and Gayvoronskaya, Tatiana and Meinel, Christoph},
-  journal={Computer Science Review},
-  volume={30},
-  pages={80--86},
-  year={2018},
-  publisher={Elsevier}
+    title = {A survey on essential components of a self-sovereign identity},
+    journal = {Computer Science Review},
+    volume = {30},
+    pages = {80-86},
+    year = {2018},
+    issn = {1574-0137},
+    doi = {https://doi.org/10.1016/j.cosrev.2018.10.002},
+    url = {https://www.sciencedirect.com/science/article/pii/S1574013718301217},
+    author = {Alexander Mühle and Andreas Grüner and Tatiana Gayvoronskaya and Christoph Meinel},
 }
 
 @article{rentzsch2023digital,
@@ -231,14 +239,15 @@
 }
 
 @article{tariq2022cerberus,
-  title={Cerberus: A blockchain-based accreditation and degree verification system},
-  author={Tariq, Aamna and Haq, Hina Binte and Ali, Syed Taha},
-  journal={IEEE Transactions on Computational Social Systems},
+  author={Tariq, Aamna and Binte Haq, Hina and Ali, Syed Taha},
+  journal={IEEE Transactions on Computational Social Systems}, 
+  title={Cerberus: A Blockchain-Based Accreditation and Degree Verification System}, 
+  year={2023},
   volume={10},
   number={4},
-  pages={1503--1514},
-  year={2022},
-  publisher={IEEE}
+  pages={1503-1514},
+  keywords={Fraud;Accreditation;Education;Ecosystems;Blockchains;Medical services;Investment;Accreditation;blockchain;credential fraud},
+  doi={10.1109/TCSS.2022.3188453}
 }
 
 @inproceedings{lin2024accountabstraction,
@@ -246,9 +255,38 @@
   booktitle={2024 International Conference on Computing, Networking and Communications (ICNC)}, 
   title={A Measurement Investigation of ERC-4337 Smart Contracts on Ethereum Blockchain}, 
   year={2024},
-  volume={},
-  number={},
   pages={1164-1170},
   keywords={Costs;Smart contracts;Extensibility;Classification algorithms;Consensus protocol;Proposals;Logic;Ethereum;Account Abstraction;ERC-4337;Smart Contract;Gas},
   doi={10.1109/ICNC59896.2024.10556301}
+}
+
+@inproceedings{irani2018blockchain,
+  author={Acharjamayum, Irani and Patgiri, Ripon and Devi, Dhruwajita},
+  booktitle={2018 IEEE Symposium Series on Computational Intelligence (SSCI)}, 
+  title={Blockchain: A Tale of Peer to Peer Security}, 
+  year={2018},
+  volume={},
+  number={},
+  pages={609-617},
+  keywords={Blockchain;Bitcoin;Peer-to-peer computing;Internet;Blockchain;Decentralization;Internet of things;Smart contracts;Cryptocurrency;Bitcoin;peer-to-peer;security;Survey},
+  doi={10.1109/SSCI.2018.8628826}
+}
+
+@inproceedings{sasson2014zerocash,
+  author={Ben Sasson, Eli and Chiesa, Alessandro and Garman, Christina and Green, Matthew and Miers, Ian and Tromer, Eran and Virza, Madars},
+  booktitle={2014 IEEE Symposium on Security and Privacy}, 
+  title={Zerocash: Decentralized Anonymous Payments from Bitcoin}, 
+  year={2014},
+  pages={459-474},
+  keywords={Online banking;Privacy;Public key;Protocols;Logic gates;Bitcoin;decentralized electronic cash;zero knowledge},
+  doi={10.1109/SP.2014.36}
+}
+
+@article{buterin2016ethereum,
+  title={Ethereum: platform review},
+  author={Buterin, Vitalik},
+  journal={Opportunities and challenges for private and consortium blockchains},
+  volume={45},
+  pages={1-45},
+  year={2016}
 }
