--- a/thesis.tex
+++ b/thesis.tex
@@ -1,26 +1,5 @@
 \documentclass[british,titlepage]{ntnuthesis}
 
-\usepackage{listings-solidity}
-\usepackage{listings-typescript}
-
-\usepackage{xcolor}
-
-% Define custom colors for syntax highlighting
-\definecolor{tskeyword}{rgb}{0.0, 0.0, 0.6}
-\definecolor{tscomment}{rgb}{0.0, 0.5, 0.0}
-\definecolor{tsstring}{rgb}{0.58, 0, 0.82}
-
-\definecolor{verylightgray}{rgb}{.97,.97,.97}
-
-\lstset{ % define general preferences
-	backgroundcolor=\color{verylightgray},
-	extendedchars=true,
-    showstringspaces=false,
-    showspaces=false,
-    tabsize=4,
-    %breaklines=true,
-}
-
 \title{EduWallet: A Blockchain-Enabled Digital Wallet for Managing University Course Credits}
 \shorttitle{EduWallet}
 \author{Diego Da Giau}
@@ -52,7 +31,9 @@
 \input{chapters/7-on_chain_design}
 \input{chapters/8-off_chain_design}
 \input{chapters/9-implementation}
-\input{chapters/10-validation}
+\input{chapters/10-results}
+\input{chapters/11-discussion}
+\input{chapters/12-conclusion}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
