--- a/thesis.tex
+++ b/thesis.tex
@@ -11,8 +11,8 @@
 
 \begin{document}
 
-% \input{chapters/0a-abstract.tex}
-% \input{chapters/0b-sammendrag.tex}
+\input{chapters/0a-abstract.tex}
+\input{chapters/0b-sammendrag.tex}
 
 \tableofcontents
 \listoffigures
